# LightweightPacketAnalyzer

./: .env  .env.backup  report.md  答辩准备.md  答辩准备2.md  答辩准备3.md  网络流量统计与抓包分析.docx  网络流量统计与抓包分析.md  项目经历_LightweightPacketAnalyzer.md  项目经历_简历版.md
LightweightPacketAnalyzer/: .env.backup  .env.example  .gitignore  README.md  add_raw_data.py  check_all_packets.py  check_db.py  check_db_structure.py  check_latest_packets.py  check_session55.py  check_session_79_packets.py  check_sessions.py  clean_duplicate_packets.py  debug_database.py  debug_duplicate_gui.py  debug_duplicate_packets.py  debug_gui_startup.py  debug_packets.py  debug_session.py  debug_session_79.py  debug_session_issue.py  debug_session_packets.py  debug_test.py  network_analyzer.db  network_analyzer.db.backup  protocol_stats_test_report.txt  pyproject.toml  test.db  test_all_packets.py  test_chart_fix.py  test_complete_settings.py  test_complete_theme_system.py  test_csv_export_fix.py  test_duplicate_fix.py  test_font_fix.py  test_gui_integration.py  test_gui_packet_details.py  test_main_window_theme.py  test_main_window_theme_simple.py  test_mainwindow_simple.py  (+30 more)
LightweightPacketAnalyzer/docs/协议统计/: ACCEPTANCE_协议统计.md  (+2 more)
LightweightPacketAnalyzer/reports/: network_analysis_20250926_220820_protocols.csv  network_analysis_20250926_220820_summary.csv  network_analysis_20250926_220820_traffic.csv  network_analysis_20250926_220904_protocols.csv  network_analysis_20250926_220904_summary.csv  network_analysis_20250926_220904_traffic.csv  network_analysis_20250926_234413_protocols.csv  network_analysis_20250926_234413_summary.csv  network_analysis_20250926_234413_traffic.csv  network_analysis_data_20250926_235953.csv  network_analysis_report_20250926_215350.html  network_analysis_report_20250926_220820.html  network_analysis_report_20250926_220904.html  network_analysis_report_20250926_234413.html  network_analysis_report_20250926_235953.html
LightweightPacketAnalyzer/src/: test_insert_packets.py
LightweightPacketAnalyzer/tests/: __init__.py  test_analysis.py  test_capture.py  test_capture_options.py  test_config.py  test_gui.py  test_integration.py  test_processing.py  test_storage.py
(+204 files in other folders)
